test/fail_compilation/fail315.d
void foo(S...)(S u) {
    alias typeof(mixin("{ return a[1;}()"))  z;
}

void main() {
   foo!()(0);
}
